@@ -1,6 +1,12 @@
 2009-02-10  Ross Burton  <ross@linux.intel.com>
 
 	* src/sj-main.c:
+	Remove musicbrainz data if the album artist and title are
+	edited (#566431).
+
+2009-02-10  Ross Burton  <ross@linux.intel.com>
+
+	* src/sj-main.c:
 	Fix error handling if the glade file isn't found.
 
 2009-02-10  Ross Burton  <ross@linux.intel.com>
